--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
   
+  <script src="JiraClient.js"></script>
   <script src="main.js"></script>
 
 </head>
